multiple fixes, added cookies, search improved, data updated....

--- a/jane verde initial template/details.html
+++ b/jane verde initial template/details.html
@@ -83,9 +83,9 @@
                                     <img src="./svg/shield_green.svg" alt="Jane Verde SVG" />
                                     Verify Account
                                 </a>
-                                <a href="static_page.html" class="button-link">Help / Faq</a>
-                                <a href="static_page.html" class="button-link">Privacy Policy</a>
-                                <a href="static_page.html" class="button-link">Avoid Scams & Fraud</a>
+                                <a href="javascript:;" class="button-link">Help / Faq</a>
+                                <a href="javascript:;" class="button-link">Privacy Policy</a>
+                                <a href="javascript:;" class="button-link">Avoid Scams & Fraud</a>
                             </div>
                         </div>
                         <div class="clearfix"></div>
@@ -222,11 +222,11 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="static_page.html" target="_blank">Help / Faq</a></li>
-                        <li><a href="static_page.html" target="_blank">Privacy Policy</a></li>
-                        <li><a href="static_page.html" target="_blank">Avoid Scams & Fraud</a></li>
-                        <li><a href="static_page.html" target="_blank">Become verified member</a></li>
-                        <li><a href="static_page.html" target="_blank" class="last-footer-item">Espanol • ES</a></li>
+                        <li><a href="javascript:;" target="_blank">Help / Faq</a></li>
+                        <li><a href="javascript:;" target="_blank">Privacy Policy</a></li>
+                        <li><a href="javascript:;" target="_blank">Avoid Scams & Fraud</a></li>
+                        <li><a href="javascript:;" target="_blank">Become verified member</a></li>
+                        <li><a href="javascript:;" target="_blank" class="last-footer-item">Espanol • ES</a></li>
                     </ul>
                     <div class="clearfix"></div>
                 </div>
